Localization/Debug/message.txt
edu/uha/miage/InitializatorTest.java:1332: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertTrue("Cette classe devrait être un Bean : \n" + "public class Bean03 implements Serializable {\n" + "        private static int theint;\n" + "\n" + "        public static int getTheint() {\n" + "            return theint;\n" + "        }\n" + "\n" + "        public static void setTheint(int theint) {\n" + "            Bean03.theint = theint;\n" + "        }\n" + "    }", Initializator.isBean(Bean03.class));
                                                                                                                                                                                                                                                                                                                                                                                                                        ^
edu/uha/miage/InitializatorTest.java:1339: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Un bean doit être Serializable", Initializator.isBean(NotBeanBecauseNotSerializable.class));
                                                                                      ^
edu/uha/miage/InitializatorTest.java:1346: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Un bean est une classe dérivable (extensible)", Initializator.isBean(NotBeanBecauseFinal.class));
                                                                                                     ^
edu/uha/miage/InitializatorTest.java:1353: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Un bean doit avoir un constructeur par défaut (ou tout du moins pouvoir être construit sans paramètre)", Initializator.isBean(NotBeanBecauseNoDefaultConstructor.class));
                                                                                                                                                              ^
edu/uha/miage/InitializatorTest.java:1360: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Quelque chose ne va pas dans la vérification des setters", Initializator.isBean(NotBeanBecauseItLacksAnSetterForAnint.class));
                                                                                                                ^
edu/uha/miage/InitializatorTest.java:1367: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Quelque chose de va pas dans la vérification des getters", Initializator.isBean(NotBeanBecauseItLacksAGetterForADouble.class));
                                                                                                                ^
edu/uha/miage/InitializatorTest.java:1374: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Attention un getter pour un booléen doit commencer par is", Initializator.isBean(NotBeanBecauseABooleanGetterShouldBeginByIs.class));
                                                                                                                 ^
edu/uha/miage/InitializatorTest.java:1381: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Attention à vérifier le type de retour des getters", Initializator.isBean(NotBeanBecauseWrongReturnForGetaColor.class));
                                                                                                          ^
edu/uha/miage/InitializatorTest.java:1388: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Attention à vérifier qu'un setter doit être void", Initializator.isBean(NotBeanBecauseSetAStringNotVoid.class));
                                                                                                        ^
edu/uha/miage/InitializatorTest.java:1395: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Un attribut static doit avoir un getter static", Initializator.isBean(NotBeanBecauseGetTheIntShouldBeStatic.class));
                                                                                                      ^
edu/uha/miage/InitializatorTest.java:1402: error: unreported exception NoSuchMethodException; must be caught or declared to be thrown
        assertFalse("TODO 1.01 : Un attribut static doit avoir un setter static", Initializator.isBean(NotBeanBecauseSetTheIntShouldBeStatic.class));
                                                                                                      ^
11 errors
Not compiled
